WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63496
[Qt] DRT support for setInteractiveFormValidationEnabled
https://bugs.webkit.org/show_bug.cgi?id=63496
Summary
[Qt] DRT support for setInteractiveFormValidationEnabled
Diego Gonzalez
Reported
2011-06-27 17:16:46 PDT
Make possible to enable setInteractiveFormValidationEnabled on Qt DRT Unskipped: fast/forms/interactive-validation-prevented.html fast/forms/interactive-validation-attach-assertion.html fast/forms/interactive-validation-assertion-by-validate-twice.html fast/forms/interactive-validation-select-crash.html fast/forms/interactive-validation-crash-by-style-override.html
Attachments
Patch
(6.23 KB, patch)
2011-06-27 17:20 PDT
,
Diego Gonzalez
kenneth
: review+
kenneth
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Diego Gonzalez
Comment 1
2011-06-27 17:20:46 PDT
Created
attachment 98821
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2011-06-28 01:43:54 PDT
Comment on
attachment 98821
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=98821&action=review
> Source/WebKit/qt/WebCoreSupport/DumpRenderTreeSupportQt.cpp:1012 > +void DumpRenderTreeSupportQt::setInteractiveFormValidationEnabled(QWebPage* page, bool flag)
flag is a pretty bad name for a bool. what about 'bool enable'
Diego Gonzalez
Comment 3
2011-06-29 05:32:29 PDT
commited at
r89972
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug