2011-06-27  Diego Gonzalez  <diegohcg@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

    [Qt] DRT support for setInteractiveFormValidationEnabled
    https://bugs.webkit.org/show_bug.cgi?id=63496

    Unskipped:
        fast/forms/interactive-validation-prevented.html
        fast/forms/interactive-validation-attach-assertion.html
        fast/forms/interactive-validation-assertion-by-validate-twice.html
        fast/forms/interactive-validation-select-crash.html
        fast/forms/interactive-validation-crash-by-style-override.html

    Source/WebKit/qt:

    * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
    (DumpRenderTreeSupportQt::setInteractiveFormValidationEnabled):
    * WebCoreSupport/DumpRenderTreeSupportQt.h:

    Tools:

    * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
    (WebCore::DumpRenderTree::DumpRenderTree):

    LayoutTests:

    * platform/qt/Skipped:

Canonical link: https://commits.webkit.org/79257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89972 268f45cc-cd09-0410-ab3c-d52691b4dbfc